fix: fixed issue with overflow

--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -5,6 +5,8 @@
 
   background-position: center;
   background-size: cover;
+
+  overflow: hidden;
 }
 
 .card__content {
